# amae

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
npm/amae/: package.json
npm/amae-cli/: README.md  package.json
npm/amae-darwin-arm64/: package.json
npm/amae-darwin-x64/: package.json
npm/amae-linux-x64/: package.json
npm/amae-win32-x64/: package.json
scripts/: build-npm.js
src/: cas.rs  cli.rs  linker.rs  lock.rs  main.rs  npmrc.rs  package.rs  resolver.rs  workspace.rs
