[package]
name = "amae"
version = "0.10.2"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
tar = "0.4"
flate2 = "1.0"
bincode = "1.3"
sha-1 = "0.10"
sha2 = "0.10"
futures-util = "0.3"
directories = "5.0"
tempfile = "3.8"
indicatif = "0.17"
console = "0.15"
clap_complete = "4.4"
rayon = "1.8"
memmap2 = "0.9"
